<resources>
    <string name="app_name">Vibe Calculator</string>
    <string name="title">Vibe Calculator</string>
    <string name="subtitle">Combine two moods to calculate your vibe</string>
    <string name="mood_a_label">First Mood</string>
    <string name="mood_b_label">Second Mood</string>
    <string name="operation_label">Operation</string>
    <string name="calculate">Calculate Vibe</string>
    <string name="reset">Reset</string>
    <string name="close">Got it</string>
    <string name="history_title">Recent Calculations</string>
</resources>
